--- a/pages/pagina2.html
+++ b/pages/pagina2.html
@@ -24,8 +24,45 @@
     </nav>
 </body>
 <main class="pagina2">
-    <div></div>
-    <div></div>
+    <div>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>     
+    </div>
+    <div>
+        <h2></h2>
+        <h2></h2>
+        <h2></h2>
+        <h2></h2>
+    </div>
+
+    <section>
+        <h3></h3>
+        <h3></h3>
+    </section>
+
+    <footer>
+            <aside><h4></h4></aside>
+            <aside><h4></h4></aside>
+            <aside><h4></h4></aside>
+            <div>
+                <article>
+                    <h5 class="circle1"></h5>
+                    <h5></h5>
+                </article>
+                <article>
+                    <h5 class="circle1"></h5>
+                    <h5></h5>                
+                </article>                
+                
+            </div>
+    </footer>
+ 
+
+
+
+
 </main>
 
 
