--- a/pages/pagina3.html
+++ b/pages/pagina3.html
@@ -58,20 +58,42 @@
             <footer></footer>
             <aside></aside>
         </section>
-
-
     </nav>
 
-    
+    <footer>
+        <div>
+            
+            <nav>
+                <h1></h1>
+                <h1></h1>
+            </nav>
+            <article>
+                <h2></h2>
+                <h2></h2>
+            </article>
+            <main>
+                <h3></h3>
+                <h3></h3>
+            </main>
 
+        </div>
+    </footer>
 
-
-
-
-
-
-
-
+    <section>
+        <footer>
+                <article>
+                    <nav>
+                        <main>
+                            <h5></h5>
+                            <h5></h5>
+                            <h5></h5>
+                            <h5></h5>
+                            <h5></h5>
+                        </main>
+                    </nav>
+                </article>
+        </footer>
+    </section>
 
 
 
