--- a/pages/pagina5.html
+++ b/pages/pagina5.html
@@ -23,7 +23,110 @@
         
     </nav>
 </body>
+<main class="pagina5">
 
+<footer>
+    <div>
+        <h1></h1>
+        <h1></h1>
+    </div>
+    <nav>
+        <h2></h2>
+    </nav>
+    <article>
+        <h3></h3>
+        <h3></h3>
+    </article>
+    <div>
+            <h1></h1>
+            <h1></h1>
+    </div>
+    <nav>
+        <h2></h2>
+    </nav>
+    <section>
+        <h4></h4>
+        <h4></h4>
+        <h5></h5>
+        <h6></h6>
+    </section>
+
+</footer>
+<footer>
+        <section>
+                <h4></h4>
+                <h4></h4>
+                <h5></h5>
+                <h6></h6>
+            </section>
+            <div>
+                    <h1></h1>
+                    <h1></h1>
+                </div>
+                <nav>
+                    <h2></h2>
+                </nav>
+                <article>
+                    <h3></h3>
+                    <h3></h3>
+                </article>
+                <main>
+                     <aside><h1></h1></aside>
+                     <aside><h1></h1></aside>
+                </main>
+</footer>
+<footer class="ultimo">
+    <article>
+        <h1></h1>
+
+    </article>
+    <div>
+       <h2></h2>
+    </div>
+    <nav>
+        <h3></h3>
+        <h3></h3>
+        <h3></h3>
+        <h3></h3>
+        
+    </nav>
+    <nav>
+        <aside><h4></h4></aside>
+        <h5></h5>
+    </nav>
+    <main>
+        <h6></h6>
+        <h6></h6>
+        <h6></h6>
+    </main>
+    <main></main>
+</footer>
+
+<div>
+      <nav>
+        <h1></h1>
+        <h1></h1>
+        <h2></h2>
+      </nav>
+      <nav>
+        <h1></h1>
+        <h1></h1>
+        <h2></h2>
+      </nav>
+
+      <footer>
+          <main>
+              <h6></h6>
+              <h6></h6>
+              <h6></h6>
+          </main>
+      </footer>
+
+</div>
+
+
+
+</main>
 
 
 
