--- a/pages/pagina4.html
+++ b/pages/pagina4.html
@@ -23,7 +23,103 @@
         
     </nav>
 </body>
+<main class="pagina4">
 
+    <section>
+        <div>
+            <h1></h1>
+            <h1></h1>
+        </div>
+        <div>
+            <h2></h2>
+        </div>
+        <div>
+            <h3></h3>
+            <h3></h3>
+        </div>
+        <div>
+            <h4></h4>
+        </div>
+        <div>
+            <h5></h5>
+            <h5></h5>
+        </div>
+        <article></article>
+    </section>
+
+<footer>
+    <section>
+        <h1></h1>
+    </section>
+    <article>
+        <h2></h2>
+    </article>
+    <div>
+        <h3></h3>
+        <h3></h3>
+    </div>
+</footer>
+
+     <div>
+                <article>
+                    <nav>
+                        <main><h1></h1></main>
+                        <main><h1></h1></main>
+                        <main><h1></h1></main>
+                    </nav>
+                </article>
+     </div>
+
+
+   <nav>    
+      <article>
+          <div>
+              <main>
+                  <h1></h1>
+              </main>
+              <h2></h2>
+          </div>
+      </article>
+      <article>
+          <div>
+              <h2></h2>
+                <main>
+                        <h1></h1>
+                </main>
+              
+          </div>
+      </article>
+      <article>
+          <div>
+              <h5></h5>
+          </div>
+      </article>
+   </nav> 
+
+   <article>
+       <nav><h4></h4></nav>
+       <nav><h4></h4></nav>
+       <nav><h4></h4></nav>
+       <nav><h4></h4></nav>
+       <nav>
+           <h1></h1>
+           <h1></h1>
+       </nav>       
+   </article>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</main>
 
 
 
